# time_model

./: make.sh  readme.md  start.sh
General/: General.sln  build-conditions.txt
__build_first/easyBMP/: EasyBMP.h  EasyBMP.ncb  EasyBMP.sln  EasyBMP.vcproj  EasyBMP_Api.h  EasyBMP_DataStructures.h  EasyBMP_Font.cpp  EasyBMP_Font.h  EasyBMP_Geometry.cpp  EasyBMP_Geometry.h  EasyBMP_VariousBMPutilities.h  EasyBMP_extensions_ChangeLog.txt  Makefile  init.sh
__build_first/easyBMP/GeometryAndFont_Sample/: AdditionalSource.cpp  AdditionalSource.h  FontTest.cpp  makefile
__build_first/ffmpeg-svn/: .depend  config.err  config.h  config.mak  help.txt  init-windows.sh  libavcodec-uninstalled.pc  libavcodec.pc  libavformat-uninstalled.pc  libavformat.pc  libavutil-uninstalled.pc  libavutil.pc  libswscale-uninstalled.pc  libswscale.pc
__build_first/ffmpeg-svn/libavcodec/: avcodec-51.def  avcodec-51.exp
__build_first/ffmpeg-svn/libavformat/: avformat-51.def  avformat-51.exp
__build_first/ffmpeg-svn/libavutil/: avutil-49.def  avutil-49.exp  avutil-49.lib
__build_first/libsamplerate/: init.sh
__build_first/libsamplerate/Win32/libResample/: libResample.sln  libResample.vcproj
__build_first/libsamplerate/src/: samplerate.c  src_linear.c  src_sinc.c  src_zoh.c
__build_first/libsamplerate/tests/: callback_test.c  multi_channel_test.c  reset_test.c
data/: time_ZHAW.ini
data/trained/: timit_train_mfcc_pitch.norm
dlls/: EasyBMP.h  EasyBMP.lib  EasyBMP_Api.h  EasyBMP_BMP.h  EasyBMP_DataStructures.h  EasyBMP_Font.h  EasyBMP_Geometry.h  avcodec-51.lib  avformat-51.lib  inttypes.h  jni_SC_Wrapper.h  libMatlab.h  libMatlab.lib  libsamplerate.lib  rational.h  stdint.h
sclib/: sclib.vcxproj  sclib.vcxproj.filters
sclib/src/: Makefile.am  SC_Api.h  SC_Aux.cpp  SC_Aux.h  SC_BaggenstossEM.cpp  SC_BaggenstossEM.h  SC_BaggenstossEMex.cpp  SC_BaggenstossEMex.h  SC_Centroid.cpp  SC_Centroid.h  SC_Centroid_Gaussian.cpp  SC_Centroid_Gaussian.h  SC_Centroid_Point.cpp  SC_Centroid_Point.h  SC_Centroid_Signature.cpp  SC_Centroid_Signature.h  SC_Classifier.cpp  SC_Classifier.h  SC_ClassifierHandler.cpp  SC_ClassifierHandler.h  SC_ClassifierTree.cpp  SC_ClassifierTree.h  SC_ClassifierWithWeights.cpp  SC_ClassifierWithWeights.h  SC_Classifier_AdaBoost.cpp  SC_Classifier_AdaBoost.h  SC_Classifier_DecisionStump.cpp  SC_Classifier_DecisionStump.h  SC_Classifier_ML.cpp  SC_Classifier_ML.h  SC_Classifier_SVM.cpp  SC_Classifier_SVM.h  SC_Cluster.cpp  SC_Cluster.h  SC_Clusterer.cpp  SC_Clusterer.h  SC_Conversion.cpp  SC_Conversion.h  SC_Corpus.cpp  SC_Corpus.h  (+198 more)
svlib/: svlib.vcxproj  svlib.vcxproj.filters
svlib/src/: GN_FFT.cpp  GN_FFT.h  GN_Filter.cpp  GN_Filter.h  GN_Func.cpp  GN_Func.h  GN_LPC.cpp  GN_LPC.h  GN_Matrix.cpp  GN_Matrix.h  GN_Rand.cpp  GN_Rand.h  GN_SigWin.cpp  GN_SigWin.h  GN_WaveGen.cpp  GN_WaveGen.h  Makefile.am  SV_Data.cpp  SV_Data.h  SV_DataIO.cpp  SV_DataIO.h  SV_Error.cpp  SV_Error.h  SV_Feature.cpp  SV_Feature.h  SV_Feature_LPCC.cpp  SV_Feature_LPCC.h  SV_Feature_MFCC.cpp  SV_Feature_MFCC.h  SV_Feature_Pitch.cpp  SV_Feature_Pitch.h  SV_General.cpp  SV_General.h  SV_Lib.h  SV_Model.cpp  SV_Model.h  SV_Model_CHMM.cpp  SV_Model_CHMM.h  SV_Model_DHMM.cpp  SV_Model_DHMM.h  (+17 more)
testbed/: testbed.vcxproj  testbed.vcxproj.filters
testbed/src/: Makefile.am  configure.ac  init.sh  testbed.cpp
