

lib_LTLIBRARIES = libsclib.la

libsclib_la_SOURCES = \
	SC_Aux.cpp \
	SC_MixtureModel.cpp \
	SC_Segmentation_Silence_LZL.cpp \
	SC_BaggenstossEM.cpp \
	SC_MixtureModel_GMM.cpp \
	SC_BaggenstossEMex.cpp \
	SC_Feature_FbE.cpp \
	SC_MixtureModel_GMM_UBM.cpp \
	SC_Centroid.cpp \
	SC_FeatureHandler.cpp \
	SC_MixtureModel_MIX2MAX.cpp \
	SC_Segmentation_VUv.cpp \
	SC_Centroid_Gaussian.cpp \
	SC_Feature_LPC.cpp \
	SC_MixtureModel_MIX2MAXex.cpp \
	SC_Centroid_Point.cpp \
	SC_Feature_LPCresidual.cpp \
	SC_MixtureModel_MIXMAX.cpp \
	SC_Segmentation_VUv_LNK.cpp \
	SC_Centroid_Signature.cpp \
	SC_Feature_MFCC.cpp \
	SC_Model.cpp \
	SC_Classifier.cpp \
	SC_Feature_NFR.cpp \
	SC_ModelHandler.cpp \
	SC_Classifier_ML.cpp \
	SC_Feature_SDP.cpp \
	SC_Model_Pareto.cpp \
	SC_Signal.cpp \
	SC_Feature_Spectrum.cpp \
	SC_SignalHandler.cpp \
	SC_Classifier_SVM.cpp \
	SC_Feature_SpectrumFlux.cpp \
	SC_Model_qGMM.cpp \
	SC_Signal_MPEG.cpp \
	SC_ClassifierTree.cpp \
	SC_Feature_STE.cpp \
	SC_Partition.cpp \
	SC_Signal_NIST.cpp \
	SC_Cluster.cpp \
	SC_Feature_SubBandPower.cpp \
	SC_PDE.cpp \
	SC_Signal_WAVE.cpp \
	SC_Clusterer.cpp \
	SC_Resampling.cpp \
	SC_Signature.cpp \
	SC_Corpus.cpp \
	SC_Feature_ZCR.cpp \
	SC_Score_AudioTypeClassification.cpp \
	SC_SpeakerClusterer.cpp \
	SC_Corpus_MAC.cpp \
	SC_Gauss.cpp \
	SC_Score_ChangeDetection.cpp \
	SC_SpeakerIdentificator.cpp \
	SC_Corpus_MPEG7.cpp \
	SC_GroundTruth.cpp \
	SC_Score.cpp \
	SC_SpeakerScore_Classification.cpp \
	SC_Corpus_SCiVo.cpp \
	SC_GroundTruth_MAC.cpp \
	SC_Score_VUv.cpp \
	SC_SpeakerScore_Clustering.cpp \
	SC_Corpus_TIMIT.cpp \
	SC_GroundTruth_MPEG7.cpp \
	SC_SDP.cpp \
	SC_SpeakerScore.cpp \
	SC_Corpus_Wesley.cpp \
	SC_GroundTruth_SCiVo.cpp \
	SC_Segmentation_AudioType.cpp \
	SC_SpeakerScore_Identification.cpp \
	SC_DistanceMeasures.cpp \
	SC_GroundTruth_TIMIT.cpp \
	SC_Segmentation_AudioType_LZL.cpp \
	SC_SVM.cpp \
	SC_EMD.cpp \
	SC_GroundTruth_Wesley.cpp \
	SC_Segmentation_Changes.cpp \
	SC_Timer.cpp \
	SC_Enhancement.cpp \
	SC_Ini.cpp \
	SC_Transform.cpp \
	SC_LDA.cpp \
	SC_Segmentation_Changes_LZW.cpp \
	SC_TweakableParameters.cpp \
	SC_Feature_BandPeriodicity.cpp \
	SC_Lib.cpp \
	SC_SegmentationHandler.cpp \
	SC_MatrixFunctions.cpp \
	SC_Segmentation_Silence.cpp \
	SC_Feature_BrightnessBandwidth.cpp \
	SC_MixtureModel_bGMM.cpp \
	SC_Segmentation_Silence_LNK.cpp \
	SC_Feature_LSP.cpp \
	SC_Feature_Pitch.cpp \
	SC_Conversion.cpp \
	SC_Model_SVM.cpp \
	SC_Classifier_DecisionStump.cpp \
	SC_ClassifierWithWeights.cpp \
	SC_Classifier_AdaBoost.cpp \
	SC_ClassifierHandler.cpp \
	SC_HHT.cpp \
	SC_MainTasks.cpp \
	SC_Segmentation_VUv_ESPS.cpp \
	SC_Model_HMM.cpp \
	SC_Model_FullGauss.cpp \
	SC_Feature_Formant.cpp \
	SC_Synthesis.cpp \
	SC_Model_VQ.cpp \
	SC_Segmentation_Changes_KBK.cpp \
	SC_Feature_Samples.cpp \
	SC_Signal_jWAVE.cpp \
	SC_JStreamReader.cpp\
	SC_Segmentation_Changes_Std.cpp \
	SC_Model_Time.cpp \
	SC_MD5.cpp \
	SC_Matlab.cpp \
	SC_Model_MetaGMM.cpp

	
include_HEADERS = \
	SC_Aux.h \
	SC_MixtureModel.h \
	SC_Segmentation_Silence_LZL.h \
	SC_BaggenstossEM.h \
	SC_MixtureModel_GMM.h \
	SC_BaggenstossEMex.h \
	SC_Feature_FbE.h \
	SC_MixtureModel_GMM_UBM.h \
	SC_Centroid.h \
	SC_FeatureHandler.h \
	SC_MixtureModel_MIX2MAX.h \
	SC_Segmentation_VUv.h \
	SC_Centroid_Gaussian.h \
	SC_Feature_LPC.h \
	SC_MixtureModel_MIX2MAXex.h \
	SC_Centroid_Point.h \
	SC_Feature_LPCresidual.h \
	SC_MixtureModel_MIXMAX.h \
	SC_Segmentation_VUv_LNK.h \
	SC_Centroid_Signature.h \
	SC_Feature_MFCC.h \
	SC_Model.h \
	SC_Classifier.h \
	SC_Feature_NFR.h \
	SC_ModelHandler.h \
	SC_Classifier_ML.h \
	SC_Feature_SDP.h \
	SC_Model_Pareto.h \
	SC_Signal.h \
	SC_Feature_Spectrum.h \
	SC_SignalHandler.h \
	SC_Classifier_SVM.h \
	SC_Feature_SpectrumFlux.h \
	SC_Model_qGMM.h \
	SC_Signal_MPEG.h \
	SC_ClassifierTree.h \
	SC_Feature_STE.h \
	SC_Partition.h \
	SC_Signal_NIST.h \
	SC_Cluster.h \
	SC_Feature_SubBandPower.h \
	SC_PDE.h \
	SC_Signal_WAVE.h \
	SC_Clusterer.h \
	SC_Resampling.h \
	SC_Signature.h \
	SC_Corpus.h \
	SC_Feature_ZCR.h \
	SC_Score_AudioTypeClassification.h \
	SC_SpeakerClusterer.h \
	SC_Corpus_MAC.h \
	SC_Gauss.h \
	SC_Score_ChangeDetection.h \
	SC_SpeakerIdentificator.h \
	SC_Corpus_MPEG7.h \
	SC_GroundTruth.h \
	SC_Score.h \
	SC_SpeakerScore_Classification.h \
	SC_Corpus_SCiVo.h \
	SC_GroundTruth_MAC.h \
	SC_Score_VUv.h \
	SC_SpeakerScore_Clustering.h \
	SC_Corpus_TIMIT.h \
	SC_GroundTruth_MPEG7.h \
	SC_SDP.h \
	SC_SpeakerScore.h \
	SC_Corpus_Wesley.h \
	SC_GroundTruth_SCiVo.h \
	SC_Segmentation_AudioType.h \
	SC_SpeakerScore_Identification.h \
	SC_DistanceMeasures.h \
	SC_GroundTruth_TIMIT.h \
	SC_Segmentation_AudioType_LZL.h \
	SC_SVM.h \
	SC_EMD.h \
	SC_GroundTruth_Wesley.h \
	SC_Segmentation_Changes.h \
	SC_Timer.h \
	SC_Enhancement.h \
	SC_Ini.h \
	SC_Transform.h \
	SC_LDA.h \
	SC_Segmentation_Changes_LZW.h \
	SC_TweakableParameters.h \
	SC_Feature_BandPeriodicity.h \
	SC_Lib.h \
	SC_SegmentationHandler.h \
	SC_MatrixFunctions.h \
	SC_Segmentation_Silence.h \
	SC_Feature_BrightnessBandwidth.h \
	SC_MixtureModel_bGMM.h \
	SC_Segmentation_Silence_LNK.h \
	SC_Api.h \
	SC_Feature_LSP.h \
	SC_Feature_Pitch.h \
	SC_Conversion.h \
	SC_Model_SVM.h \
	SC_Classifier_DecisionStump.h \
	SC_ClassifierWithWeights.h \
	SC_Classifier_AdaBoost.h \
	SC_ClassifierHandler.h \
	SC_HHT.h \
	SC_MainTasks.h \
	SC_Segmentation_VUv_ESPS.h \
	SC_Model_HMM.h \
	SC_Model_FullGauss.h \
	SC_Feature_Formant.h \
	SC_Synthesis.h \
	SC_Model_VQ.h \
	SC_Segmentation_Changes_KBK.h	\
	SC_Feature_Samples.h \
	SC_Signal_jWAVE.h \
	SC_JStreamReader.h \
	SC_Segmentation_Changes_Std.h \
	SC_Model_Time.h \
	SC_MD5.h \
	SC_Matlab.h \
	SC_Model_MetaGMM.h
	

libsclib_la_LDFLAGS = -version-info 1:0:0 -lstdc++ -lsvlib -lavutil -lavcodec -lavformat -leasybmp -lsamplerate -L/usr/java/jdk1.6.0_11/jre/lib/i386/client -ljvm
