
lib_LTLIBRARIES = libsvlib.la

libsvlib_la_SOURCES = \
	de_short.cpp \
	GN_LPC.cpp \
	GN_WaveGen.cpp \
	SV_Feature.cpp \
	SV_General.cpp \
	SV_Model_DTW.cpp \
	SV_Signal.cpp \
	GN_FFT.cpp \
	GN_Matrix.cpp \
	SV_Data.cpp \
	SV_Feature_LPCC.cpp \
	SV_Model_CHMM.cpp \
	SV_Model_Gaus.cpp \
	SV_Signal_NIST.cpp \
	GN_Filter.cpp \
	GN_Rand.cpp \
	SV_DataIO.cpp \
	SV_Feature_MFCC.cpp \
	SV_Model.cpp \
	SV_Model_GMM.cpp \
	GN_Func.cpp \
	GN_SigWin.cpp \
	SV_Error.cpp \
	SV_Feature_Pitch.cpp \
	SV_Model_DHMM.cpp \
	SV_Model_VQ.cpp

include_HEADERS = \
	de_short.h \
	GN_LPC.h \
	GN_WaveGen.h \
	SV_Feature.h \
	SV_General.h \
	SV_Model_DTW.h \
	SV_Signal.h \
	GN_FFT.h \
	GN_Matrix.h \
	SV_Data.h \
	SV_Feature_LPCC.h \
	SV_Model_CHMM.h \
	SV_Model_Gaus.h \
	SV_Signal_NIST.h \
	GN_Filter.h \
	GN_Rand.h \
	SV_DataIO.h \
	SV_Feature_MFCC.h \
	SV_Model.h \
	SV_Model_GMM.h \
	GN_Func.h \
	GN_SigWin.h \
	SV_Error.h \
	SV_Feature_Pitch.h \
	SV_Model_DHMM.h \
	SV_Model_VQ.h \
	SV_Lib.h \
	vector.h

	


libsvlib_la_LDFLAGS = -version-info 1:0:0 -lstdc++

